--- a/201_250.md
+++ b/201_250.md
@@ -114,32 +114,32 @@ An online retail company has more than 50 million active customers and receives 
 
 The company wants to make all the data available to various teams so that the teams can perform analytics. The solution must provide the ability to manage fine-grained permissions for the data and must minimize operational overhead. Which solution will meet these requirements?
 
-A. Migrate the purchase data to write directly to Amazon RDS. Use RDS access controls to limit access.
-B. Schedule an AWS Lambda function to periodically copy data from Amazon RDS to Amazon S3. Create an AWS Glue crawler. Use Amazon Athena to query the data. Use S3 policies to limit access.
-C. Create a data lake by using AWS Lake Formation. Create an AWS Glue JDBC connection to Amazon RDS. Register the S3 bucket in Lake Formation. Use Lake Formation access controls to limit access.
-D. Create an Amazon Redshift cluster. Schedule an AWS Lambda function to periodically copy data from Amazon S3 and Amazon RDS to Amazon Redshift. Use Amazon Redshift access controls to limit access.
+-   [ ] A. Migrate the purchase data to write directly to Amazon RDS. Use RDS access controls to limit access.
+-   [ ] B. Schedule an AWS Lambda function to periodically copy data from Amazon RDS to Amazon S3. Create an AWS Glue crawler. Use Amazon Athena to query the data. Use S3 policies to limit access.
+-   [ ] C. Create a data lake by using AWS Lake Formation. Create an AWS Glue JDBC connection to Amazon RDS. Register the S3 bucket in Lake Formation. Use Lake Formation access controls to limit access.
+-   [ ] D. Create an Amazon Redshift cluster. Schedule an AWS Lambda function to periodically copy data from Amazon S3 and Amazon RDS to Amazon Redshift. Use Amazon Redshift access controls to limit access.
 
 </details>
 
 <details>
   <summary>Answer</summary>
 
-C. Create a data lake by using AWS Lake Formation. Create an AWS Glue JDBC connection to Amazon RDS. Register the S3 bucket in Lake Formation. Use Lake Formation access controls to limit access.
+-   [ ] C. Create a data lake by using AWS Lake Formation. Create an AWS Glue JDBC connection to Amazon RDS. Register the S3 bucket in Lake Formation. Use Lake Formation access controls to limit access.
 
 Why these are the correct answers:
 
 C. Create a data lake by using AWS Lake Formation. Create an AWS Glue JDBC connection to Amazon RDS. Register the S3 bucket in Lake Formation. Use Lake Formation access controls to limit access.
 
--   [ ]   AWS Lake Formation simplifies the process of setting up a data lake.
--   [ ]   It allows for fine-grained access control at the table and column level.
--   [ ]   Using AWS Glue connections, data from Amazon RDS can be integrated into the data lake.
--   [ ]   This solution minimizes operational overhead by providing a centralized and managed way to handle data access and permissions.
+-   [ ] AWS Lake Formation simplifies the process of setting up a data lake.
+-   [ ] It allows for fine-grained access control at the table and column level.
+-   [ ] Using AWS Glue connections, data from Amazon RDS can be integrated into the data lake.
+-   [ ] This solution minimizes operational overhead by providing a centralized and managed way to handle data access and permissions.
 
 Why are the other answers wrong?
 
--   [ ]   A. Migrating all purchase data directly into Amazon RDS might not be scalable or cost-effective for large volumes of data. RDS access controls are not as fine-grained as Lake Formation.
--   [ ]   B. Using Lambda, Glue, Athena, and S3 policies requires more manual configuration and management of permissions across different services compared to Lake Formation.
--   [ ]   D. Amazon Redshift is a data warehouse and might be overkill for providing data access to various teams for general analytics. It also involves more operational overhead than Lake Formation.
+-   [ ] A. Migrating all purchase data directly into Amazon RDS might not be scalable or cost-effective for large volumes of data. RDS access controls are not as fine-grained as Lake Formation.
+-   [ ] B. Using Lambda, Glue, Athena, and S3 policies requires more manual configuration and management of permissions across different services compared to Lake Formation.
+-   [ ] D. Amazon Redshift is a data warehouse and might be overkill for providing data access to various teams for general analytics. It also involves more operational overhead than Lake Formation.
 
 Therefore, Option C is the most suitable solution because it provides fine-grained permissions and minimizes operational overhead.
 
