--- a/201_250.md
+++ b/201_250.md
@@ -145,6 +145,177 @@ Therefore, Option C is the most suitable solution because it provides fine-grain
 
 </details>
 
+<details>
+  <summary>Question 205</summary>
+
+A company hosts a marketing website in an on-premises data center. The website consists of static documents and runs on a single server. An administrator updates the website content infrequently and uses an SFTP client to upload new documents. The company decides to host its website on AWS and to use Amazon CloudFront. The company's solutions architect creates a CloudFront distribution. The solutions architect must design the most cost-effective and resilient architecture for website hosting to serve as the CloudFront origin. Which solution will meet these requirements?
+
+-   [ ] A. Create a virtual server by using Amazon Lightsail. Configure the web server in the Lightsail instance. Upload website content by using an SFTP client.
+-   [ ] B. Create an AWS Auto Scaling group for Amazon EC2 instances. Use an Application Load Balancer. Upload website content by using an SFTP client.
+-   [ ] C. Create a private Amazon S3 bucket. Use an S3 bucket policy to allow access from a CloudFront origin access identity (OAI). Upload website content by using the AWS CLI.
+-   [ ] D. Create a public Amazon S3 bucket. Configure AWS Transfer for SFTP. Configure the S3 bucket for website hosting. Upload website content by using the SFTP client.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] C. Create a private Amazon S3 bucket. Use an S3 bucket policy to allow access from a CloudFront origin access identity (OAI). Upload website content by using the AWS CLI.
+
+Why these are the correct answers:
+
+C. Create a private Amazon S3 bucket. Use an S3 bucket policy to allow access from a CloudFront origin access identity (OAI). Upload website content by using the AWS CLI.
+
+-   [ ]   Amazon S3 is a cost-effective and highly available storage service for static website content.
+-   [ ]   Using a private S3 bucket and an OAI ensures that the content is only accessible through CloudFront, enhancing security.
+-   [ ]   This solution is resilient because S3 is inherently highly available and scalable.
+
+Why are the other answers wrong?
+
+-   [ ]   A. Amazon Lightsail is a virtual private server and is not designed for highly scalable and resilient website hosting. It does not integrate well with CloudFront for origin access control.
+-   [ ]   B. Using EC2 instances and Auto Scaling with an Application Load Balancer is more complex and expensive than using S3 for static content. It also involves more operational overhead.
+-   [ ]   D. A public S3 bucket is less secure. Using AWS Transfer for SFTP is not necessary for serving static website content and adds complexity.
+
+Therefore, Option C is the most cost-effective and resilient solution for hosting a static website with CloudFront.
+
+</details>
+
+<details>
+  <summary>Question 206</summary>
+
+A company wants to manage Amazon Machine Images (AMIs). The company currently copies AMIs to the same AWS Region where the AMIs were created. The company needs to design an application that captures AWS API calls and sends alerts whenever the Amazon EC2 Createlmage API operation is called within the company's account. Which solution will meet these requirements with the LEAST operational overhead?
+
+-   [ ] A. Create an AWS Lambda function to query AWS CloudTrail logs and to send an alert when a Createlmage API call is detected.
+-   [ ] B. Configure AWS CloudTrail with an Amazon Simple Notification Service (Amazon SNS) notification that occurs when updated logs are sent to Amazon S3. Use Amazon Athena to create a new table and to query on Createlmage when an API call is detected.
+-   [ ] C. Create an Amazon EventBridge (Amazon CloudWatch Events) rule for the Createlmage API call. Configure the target as an Amazon Simple Notification Service (Amazon SNS) topic to send an alert when a Createlmage API call is detected.
+-   [ ] D. Configure an Amazon Simple Queue Service (Amazon SQS) FIFO queue as a target for AWS CloudTrail logs. Create an AWS Lambda function to send an alert to an Amazon Simple Notification Service (Amazon SNS) topic when a Createlmage API call is detected.
+  
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] C. Create an Amazon EventBridge (Amazon CloudWatch Events) rule for the Createlmage API call. Configure the target as an Amazon Simple Notification Service (Amazon SNS) topic to send an alert when a Createlmage API call is detected.
+  
+Why these are the correct answers:
+
+C. Create an Amazon EventBridge (Amazon CloudWatch Events) rule for the Createlmage API call. Configure the target as an Amazon Simple Notification Service (Amazon SNS) topic to send an alert when a Createlmage API call is detected.
+
+-   [ ] Amazon EventBridge allows you to create rules that react to events in your AWS environment, including API calls.
+-   [ ] By creating a rule specifically for the `CreateImage` API call and setting an SNS topic as the target, you can efficiently trigger alerts with minimal setup and maintenance.
+-   [ ] This solution avoids the need for custom code to query logs or manage queues, reducing operational overhead.
+  
+Why are the other answers wrong?
+
+-   [ ] A. Using a Lambda function to query CloudTrail logs adds complexity and requires writing and maintaining code. It's also less efficient than EventBridge, which can directly capture the API event.
+-   [ ] B. Configuring CloudTrail with SNS and then using Athena to query logs involves multiple services and more steps, increasing operational overhead. Athena is also better suited for analytical queries, not real-time alerting.
+-   [ ] D. Using SQS to buffer CloudTrail logs and then processing them with Lambda adds unnecessary complexity and latency. EventBridge provides a more direct and efficient way to capture and react to API events.
+
+Therefore, Option C is the most operationally efficient solution for capturing the `CreateImage` API call and sending alerts.
+
+</details>
+
+<details>
+  <summary>Question 207</summary>
+
+A company owns an asynchronous API that is used to ingest user requests and, based on the request type, dispatch requests to the appropriate microservice for processing. The company is using Amazon API Gateway to deploy the API front end, and an AWS Lambda function that invokes Amazon DynamoDB to store user requests before dispatching them to the processing microservices. The company provisioned as much DynamoDB throughput as its budget allows, but the company is still experiencing availability issues and is losing user requests. What should a solutions architect do to address this issue without impacting existing users?
+
+-   [ ] A. Add throttling on the API Gateway with server-side throttling limits.
+-   [ ] B. Use DynamoDB Accelerator (DAX) and Lambda to buffer writes to DynamoDB.
+-   [ ] C. Create a secondary index in DynamoDB for the table with the user requests.
+-   [ ] D. Use the Amazon Simple Queue Service (Amazon SQS) queue and Lambda to buffer writes to DynamoDB.
+  
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] D. Use the Amazon Simple Queue Service (Amazon SQS) queue and Lambda to buffer writes to DynamoDB.
+  
+Why these are the correct answers:
+
+D. Use the Amazon Simple Queue Service (Amazon SQS) queue and Lambda to buffer writes to DynamoDB.
+
+-   [ ]   Amazon SQS can act as a buffer between API Gateway/Lambda and DynamoDB, allowing requests to be queued during high traffic periods.
+-   [ ]   This buffering prevents DynamoDB from being overwhelmed and helps avoid losing user requests.
+-   [ ]   A Lambda function can then process the messages from the SQS queue and write them to DynamoDB at a controlled rate, ensuring that DynamoDB's throughput is not exceeded.
+
+Why are the other answers wrong?
+
+-   [ ]   A. Adding throttling on API Gateway might help to control the rate of requests, but it doesn't address the underlying issue of DynamoDB being unable to handle the write load. It could also result in losing user requests if they are throttled.
+-   [ ]   B. DAX is a cache for DynamoDB, designed to accelerate read operations. It does not help with write-heavy scenarios or buffer writes.
+-   [ ]   C. Creating a secondary index in DynamoDB can improve read performance but does not directly address the issue of high write volume causing availability issues.
+
+Therefore, Option D is the most suitable solution to buffer writes to DynamoDB and prevent losing user requests.
+
+</details>
+
+<details>
+  <summary>Question 208</summary>
+
+A company needs to move data from an Amazon EC2 instance to an Amazon S3 bucket. The company must ensure that no API calls and no data are routed through public internet routes. Only the EC2 instance can have access to upload data to the S3 bucket. Which solution will meet these requirements?
+
+- [ ] A. Create an interface VPC endpoint for Amazon S3 in the subnet where the EC2 instance is located. Attach a resource policy to the S3 bucket to only allow the EC2 instance's IAM role for access.
+- [ ] B. Create a gateway VPC endpoint for Amazon S3 in the Availability Zone where the EC2 instance is located. Attach appropriate security groups to the endpoint. Attach a resource policy to the S3 bucket to only allow the EC2 instance's IAM role for access.
+- [ ] C. Run the nslookup tool from inside the EC2 instance to obtain the private IP address of the S3 bucket's service API endpoint. Create a route in the VPC route table to provide the EC2 instance with access to the S3 bucket. Attach a resource policy to the S3 bucket to only allow the EC2 instance's IAM role for access.
+- [ ] D. Use the AWS provided, publicly available ip-ranges.json file to obtain the private IP address of the S3 bucket's service API endpoint. Create a route in the VPC route table to provide the EC2 instance with access to the S3 bucket. Attach a resource policy to the S3 bucket to only allow the EC2 instance's IAM role for access.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] A. Create an interface VPC endpoint for Amazon S3 in the subnet where the EC2 instance is located. Attach a resource policy to the S3 bucket to only allow the EC2 instance's IAM role for access.
+
+Why these are the correct answers:
+
+A. Create an interface VPC endpoint for Amazon S3 in the subnet where the EC2 instance is located. Attach a resource policy to the S3 bucket to only allow the EC2 instance's IAM role for access.
+
+- [ ] Interface VPC endpoints use private IP addresses to access S3, ensuring that traffic does not traverse the public internet.
+- [ ] Attaching a resource policy to the S3 bucket restricts access to only the specified IAM role of the EC2 instance, enhancing security.
+- [ ] This solution meets the requirements of keeping traffic private and restricting access.
+
+Why are the other answers wrong?
+
+- [ ] B. Gateway VPC endpoints for S3 are accessed via a gateway and do not use private IP addresses in the same way as interface endpoints. They are simpler but do not provide the same level of network isolation. Security groups are not directly attached to gateway endpoints.
+- [ ] C. Using `nslookup` to obtain private IP addresses is not a reliable or scalable solution. IP addresses can change, and this approach does not guarantee that traffic will remain within the AWS network.
+- [ ] D. Similar to option C, relying on the `ip-ranges.json` file is not a robust method for ensuring private connectivity. These IP ranges can change, and it does not provide the security and reliability of VPC endpoints.
+
+Therefore, Option A is the most secure and reliable solution for ensuring that data transfer to S3 from an EC2 instance remains within the AWS network and is properly secured.
+
+</details>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
